--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_passwd.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_passwd.vm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>幼富通-注册-身份安全信息</title>
+<title>幼富通，托富未来 - 注册</title>
 <script type="text/javascript" src="${staticDomain}/family/scripts/load.js"></script>
 <script type="text/javascript" src="${staticDomain}/family/scripts/family-common.js"></script>
 <script >
