--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_success.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_success.vm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>幼富通-注册-成功</title>
+<title>幼富通，托富未来 - 注册</title>
 <script type="text/javascript">
 $(function(){
    $('.nav a:eq(0)').addClass('active');
