--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>幼富通 - 账户管理 - 密码设置</title>
+<title>幼富通，托富未来 - 密码设置</title>
 <script src="${staticDomain}/family/scripts/load.js"></script>
 <script src="${staticDomain}/family/scripts/family-common.js"></script>
 <script>
@@ -394,10 +394,8 @@ $(function(){
 		$(".tradeBackStep1").attr("style","display:block;");
 		$(".tradeBackStep2").addClass("slide-out");
 		$(".btn-verifycode").trigger("click");
-		//clearDownTime();
 	})
 });
-
 </script>
 </head>
 <body>
