--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/ufb_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/ufb_index.vm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>幼富宝</title>
+<title>幼富通，托富未来</title>
 <script type="text/javascript" src="${staticDomain}/family/scripts/load.js"></script>
 <script type="text/javascript">
 $(function(){
