--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/pay_preview.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/pay_preview.vm
@@ -1,6 +1,7 @@
 <!doctype>
 <html>
 <head>
+<title>幼富通，托富未来 - 缴费</title>
 <style>
 /*本页面的覆盖样式*/
    .all-top-v2{
@@ -195,7 +196,6 @@
     	})
     })
 </script>
-   
 </head>
 <body>
     <div id="body">
