--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
@@ -3,24 +3,24 @@
 	<meta name="keywords" content="幼富通">
 	<meta name="description" content="幼富通">
     #if("$!{title}"=="")
-	    <title>幼富通</title>
+	    <title>幼富通，托富未来</title>
 	#else
 	    $!{title}
 	#end
 	<link rel="shortcut icon" href="${staticDomain}/favicon.ico" type="image/x-icon">
 	#if(${family_module} == "uft" && ${family_page} != "pay_result")
-		<link rel="stylesheet" href="${staticDomain}/family/css/style.css?t=13">
-		<link rel="stylesheet" href="${staticDomain}/family/css/family.css?t=10">
+		<link rel="stylesheet" href="${staticDomain}/family/css/style.css">
+		<link rel="stylesheet" href="${staticDomain}/family/css/family.css">
 	#elseif(${family_module} == "index" || ${family_module} == "account"
 			|| ${family_page} == "ufb_index")
 		<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
-		<link rel="stylesheet" href="${staticDomain}/family/css/main.css?t=14">
+		<link rel="stylesheet" href="${staticDomain}/family/css/main.css">
 	#elseif(${family_module} == "ufb" || ${family_module} == "setting" || ${family_module} == "help" || ${family_page} == "pay_result")
 		<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
-    	<link rel="stylesheet" href="${staticDomain}/family/css/common.css?t=20">
+    	<link rel="stylesheet" href="${staticDomain}/family/css/common.css">
 	#end
-	<link rel="stylesheet" href="${staticDomain}/family/css/header.css?t=4">
-	<link rel="stylesheet" href="${staticDomain}/family/css/footer.css?t=1">
+	<link rel="stylesheet" href="${staticDomain}/family/css/header.css">
+	<link rel="stylesheet" href="${staticDomain}/family/css/footer.css">
     
 	<script type='text/javascript' src='${staticDomain}/family/libs/jquery.min.js'></script>
 	<script type="text/javascript" src="${staticDomain}/family/libs/jquery.form.js"></script>
