--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_organ.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_organ.vm
@@ -3,7 +3,7 @@
     <meta name="keywords" content="幼富通">
 	<meta name="description" content="幼富通，幼教金融一站通">
 	#if("$!{title}"=="")
-	    <title>幼富通</title>
+	    <title>幼富通，托富未来</title>
 	#else
 	    $!{title}
 	#end
