--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_card.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_card.vm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>幼富通-注册-设置支付方式</title>
+<title>幼富通，托富未来 - 注册</title>
 <script type="text/javascript" src="${staticDomain}/family/scripts/plug.js"></script>
 <script type="text/javascript" src="${staticDomain}/family/scripts/load.js"></script>
 <script>!window.jQuery && document.write(unescape('%3Cscript src="js/minified/jquery-1.9.1.min.js"%3E%3C/script%3E'))</script>  <!--scroll美化-->
