--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_index.vm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>幼富通-注册-创建账户</title>
+<title>幼富通，托富未来 - 注册</title>
 <script>!window.jQuery && document.write(unescape('%3Cscript src="js/minified/jquery-1.9.1.min.js"%3E%3C/script%3E'))</script>  <!--scroll美化-->
 <script type="text/javascript">
 $(function(){
