--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/help/about.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/help/about.vm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>幼富通 - 帮助中心 - 关于幼富通</title>
+<title>幼富通，托富未来 - 帮助中心</title>
  <script>
     $(function(){
     	$('.nav a:eq(3)').addClass('active');
