--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/card_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/card_index.vm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>幼富通 - 账户管理 - 银行卡管理</title>
+<title>幼富通，托富未来 - 我的银行卡</title>
 <script>
 $(function(){
 	$('.nav a:eq(0)').addClass('active');
@@ -9,7 +9,6 @@ $(function(){
 </script>
 </head>
 <body>
-
     <div class="body">
 		<form id="form-settingCard" action="${ufbDomain}/family/setting/card_index.htm" method="post">
     	<div class="inner clearfix">
