--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/card_update.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/card_update.vm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>幼富通-我的银行卡-升级幼富宝卡</title>
+<title>幼富通，托富未来 - 我的银行卡</title>
 <script type="text/javascript" src="${staticDomain}/family/scripts/plug.js"></script>
 <script type="text/javascript" src="${staticDomain}/family/scripts/load.js"></script>
 <script>!window.jQuery && document.write(unescape('%3Cscript src="js/minified/jquery-1.9.1.min.js"%3E%3C/script%3E'))</script>  <!--scroll美化-->
