--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoupdate_success.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoupdate_success.vm
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<title>幼富通 - 开通结果</title>
-
+<title>幼富通，托富未来 - 修改自动充值计划</title>
 <script>
 	$(function(){
 		$('.nav a:eq(1)').addClass('active');
