--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/code_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/code_index.vm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>幼富通-收费识别码验证</title>
+<title>幼富通，托富未来 - 添加缴费学生</title>
 <script type="text/javascript">
 $(function(){
 	$('.nav a:eq(0)').addClass('active');
