--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/pay_result.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/pay_result.vm
@@ -1,73 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>幼富通 - 确认缴费结果</title>
-    <style type="text/css">
-        .title.clearfix{
-            margin-top:0;
-        }
-        .pay-info dl{
-           line-height: 2.5em;
-           font-size: 14px;
-        }
-        .pay-info dl dt{
-            float: left;
-            width: 150px;
-        }
-        .pay-info dl dd{
-            color: #333;
-        }
-        .lookup-detail{
-            display: inline-block;
-            *display: inline;
-            *zoom: 1;
-            margin-left: 30px;
-            color: #2f8fbf;
-            font-size: 14px;
-        }
-       .notice{
-          font-size: 12px;
-          color: #999;
-          background: #F0FAFC;
-          padding: 20px 25px;
-          border: 1px solid #E6E6E5;
-          line-height: 1.5;
-          position:relative;
-           margin:-15px 0 20px;
-        }
-       .notice p{
-            padding-left:0;
-            position:relative;
-        }
-        .notice p i{
-            display:block;
-            width:17px;
-            height:17px;
-            background:url(${staticDomain}/family/images/img_25.png) no-repeat;
-            position:absolute;
-            left:0;
-            top:50%;
-            margin-top:-8px;
-        }
-        .notice .v2_1{
-            position:absolute;
-            right:10px;
-            top:10px;
-            display:block;
-            width:10px;
-            height:10px;
-            cursor:pointer;
-            background:url(${staticDomain}/family/images/img_26.png) no-repeat;
-        }
-    </style>
-    <script type="text/javascript">
-	    $(function(){
-	    	$('.nav a:eq(0)').addClass('active');
-	    })
-	    $(".notice .v2_1").click(function(){
-	        $(".notice").hide();
-	    });
-    </script>
+<title>幼富通，托富未来 - 缴费</title>
+<style type="text/css">
+    .title.clearfix{
+        margin-top:0;
+    }
+    .pay-info dl{
+       line-height: 2.5em;
+       font-size: 14px;
+    }
+    .pay-info dl dt{
+        float: left;
+        width: 150px;
+    }
+    .pay-info dl dd{
+        color: #333;
+    }
+    .lookup-detail{
+        display: inline-block;
+        *display: inline;
+        *zoom: 1;
+        margin-left: 30px;
+        color: #2f8fbf;
+        font-size: 14px;
+    }
+   .notice{
+      font-size: 12px;
+      color: #999;
+      background: #F0FAFC;
+      padding: 20px 25px;
+      border: 1px solid #E6E6E5;
+      line-height: 1.5;
+      position:relative;
+       margin:-15px 0 20px;
+    }
+   .notice p{
+        padding-left:0;
+        position:relative;
+    }
+    .notice p i{
+        display:block;
+        width:17px;
+        height:17px;
+        background:url(${staticDomain}/family/images/img_25.png) no-repeat;
+        position:absolute;
+        left:0;
+        top:50%;
+        margin-top:-8px;
+    }
+    .notice .v2_1{
+        position:absolute;
+        right:10px;
+        top:10px;
+        display:block;
+        width:10px;
+        height:10px;
+        cursor:pointer;
+        background:url(${staticDomain}/family/images/img_26.png) no-repeat;
+    }
+</style>
+<script type="text/javascript">
+$(function(){
+    $('.nav a:eq(0)').addClass('active');
+    
+    $(".notice .v2_1").click(function(){
+        $(".notice").hide();
+    });
+})
+</script>
 </head>
 <body>
     <div class="body">
