ICP备案号修改

--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/footer.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/footer.vm
@@ -1,7 +1,7 @@
 <div class="LowFoot">
     <div class="inner">
         <div class="contentFoot">
-           	 幼富通版权所有 ©2014 沪ICP备14054347号
+           	 幼富通版权所有 ©2015 沪ICP备14054347号-1
         </div>
     </div>
 </div>
