--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
@@ -164,7 +164,7 @@ $(function(){
                               <td>$plan.detailid</td>
                               <td>$plan.studentnm</td>
                               <td>$plan.orgnm</td>
-                              <td>$plan.planname<span class="tip">#if(${plan.type}=="AT")月代扣#else单笔#end</span></td>
+                              <td>$plan.planname<span class="tip">#if(${plan.type}=="1")月代扣#else单笔#end</span></td>
                               <td class="num-red">$plan.payappamount</td>
                               <td>#if($plan.ackdate)${plan.ackdate}#else -- #end</td>
                               <td >
