--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/code_parent.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/code_parent.vm
@@ -28,7 +28,7 @@ $(function(){
 		var result = parent_verify(code, parent_name);
 		if(result.errCode == '0004'){
 			$('#title').hide();
-			$('#errorMsg').text('您输入的识别码或收费通知家长名有误！');
+			$('#errorMsg').text('您输入的识别码或收费通知家长姓名有误！');
 			$('#errorMsg').show();
 		}else if(result.errCode == '0000'){
 			location = '${ufbDomain}/family/uft/code_confirm.htm';
@@ -60,7 +60,7 @@ $(function(){
 <div class="addAdv Verification">
    <div class="advTitle inner advBox">
        <h1>收费识别码验证</h1>
-       <p>您的姓名与收费通知的缴费家长名不符，请检查以下信息是否正确。</p>
+       <p>您的姓名与收费通知的缴费家长姓名不符，请检查以下信息是否正确。</p>
        <div class="advBtn advMag">
            <p id="title">识别码<span class="parentN">收费通知家长名</span></p>
            <p id="errorMsg" style="display:none;color:#CB3849;">错误信息！</p>
